--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
-android.enableBuildCache=true
+#android.enableBuildCache=true
 
 VERSION_NAME=2.1.0
 VERSION_CODE=14
@@ -24,3 +24,4 @@ MIN_SDK_VERSION=14
 
 android.useAndroidX=true
 android.enableJetifier=true
+android.injected.testOnly = false
